add color boxes

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,15 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#colombia {
+    
+    background-color: #E4EB18;
+
+}
+
+#united-states {
+    
+    background-color: #F02A2A;
+
+}
